--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "author": "Toledo <gustavo@obex.pw>",
   "license": "MIT",
   "dependencies": {
-    "biscoint-api-node": "^1.2.4",
+    "biscoint-api-node": "1.4.0",
     "esm": "^3.2.25",
     "lodash": "^4.17.21",
+	"tslib": "^2.3.0",
     "play-sound": "^1.1.3"
   },
   "scripts": {
