--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "biscoint-arbitrage-bot",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
+  "engine": {
+        "node": ">=0.12"
+  },
   "repository": "https://github.com/Biscoint/biscoint-arbitrage-bot.git",
-  "author": "Toledo <gustavo@obex.pw>",
+  "author": "Biscoint",
   "license": "MIT",
   "dependencies": {
     "biscoint-api-node": "1.4.0",
     "esm": "^3.2.25",
     "lodash": "^4.17.21",
-	"tslib": "^2.3.0",
-    "play-sound": "^1.1.3"
+    "node-cron": "^3.0.0",
+    "telegraf": "^4.4.1",
+    "tslib": "^2.3.0"
   },
   "scripts": {
     "start": "node -r esm src/index.js"
