--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "biscoint-arbitrage-bot",
   "version": "2.0.0",
   "main": "index.js",
+  "type": "module",
   "engine": {
         "node": ">=14.0.0"
   },
