--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "2.0.0",
   "main": "index.js",
   "engines": {
-        "node": ">=14.0.0"
+    "node": ">=14.0.0"
   },
   "repository": "https://github.com/Biscoint/biscoint-arbitrage-bot.git",
   "author": "Biscoint",
   "license": "MIT",
   "dependencies": {
     "biscoint-api-node": "^1.4.0",
+    "bottleneck": "^2.19.5",
     "esm": "^3.2.25",
     "lodash": "^4.17.21",
     "node-cron": "^3.0.0",
@@ -18,6 +19,6 @@
   },
   "scripts": {
     "start": "node -r esm src/index.js",
-	"test": "node -r esm src/test.js"
+    "test": "node -r esm src/test.js"
   }
 }
